# c

./: .gitignore  Dockerfile  Makefile  compose.yaml  db.py  deploy.sh  entrypoint.sh  index.html  lighttpd.conf  modules.sh  pyproject.toml  styles.css
dbcon/: dbcon.py
deb/: python3-dotenv_1.0.1-1_all.deb  python3-mysql.connector_8.0.15-4_all.deb
games/kolofortuny/: index.html  wheel.php
games/kosci/: dice.cgi  dice.php  index.html
games/kosci2/: api.cgi  app.js  index.html
games/slotsy/: api.cgi  game.cgi  game.php  index.html
games/slotsy2/: api.cgi  app.js  index.html  styles.css
home/: index.html
info/: index.html
navbar/: navbar.html
play/: index.html
src/: modules.sh  run_cgi  styles.css
src/admin/: admin-user.html  api.cgi  index.html  styles.css
src/dbcon/: dbcon.py
src/games/kosci2/: api.cgi  app.js  index.html  style.css
src/games/slotsy2/: api.cgi  app.js  index.html
src/home/: index.html
src/navbar/: navbar.html  navbar.js
src/play/: index.html
src/user/: api.cgi  index.html
src/usrmgr/: adduser.py  testlog.py
src/utils/: __init__.py  cgi_app.py  cgi_helper.py  dbcon.py  dbconn.py
user/: api.cgi  index.html  test.cgi
user/test/: index.html  test.cgi  test.py
usrmgr/: adduser.py  testlog.py  usrmgr.py
