[project]
name = "c"
version = "0.1.0"
description = "An interesting http page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "src/**/*.cgi"]
