[project]
name = "c"
version = "0.1.0"
description = "An interesting http page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "ruff>=0.11.13",
    "setuptools>=80.9.0",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "src/**/*.cgi"]
exclude = ["stc/utils/dbcon.py"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # docstring
    "EM101",  # Exception must not use a string literal
    "TRY003",  # Avoid specifying long messages outside the exception class
    "ANN201",  # Missing return type annotation, it forces -> None everywhere
    "ANN202",  # Missing return type annotation, it forces -> None everywhere
    "ANN204",  # Missing return type annotation, it forces -> None everywhere
    "PGH004",  # Use specific rule codes when using `ruff: noqa`
    "T201",  # `print` found
    "EXE001",  # Shebang is present but file is not executable
    "EXE003",  # Shebang should contain `python`, `pytest`, or `uv run`
    "PLR2004",  # Magic value used in comparison
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    "COM812", # handled by ruff-format
    "LOG015",  # `exception()` call on root logger
]
